Fixed useless and conflicting dependencies. Also added icon to desktop version.